2010-09-29 Richard Frith-Macdonald  <rfm@gnu.org>

	* GSLinkedList.h:
	* GSLinkedList.m:
	Revise structure and API for greater flexibility.
	* GSThreadPool.h
	* GSThreadPool.m
	Modify for new linked list api.

2010-09-23 Richard Frith-Macdonald  <rfm@gnu.org>

	* performance/GSThreadPool.h:
	* performance/GSThreadPool.m:
	Track count of active threads and count of number of methods
	performed in the thread pool.  Display via -description.

2010-09-22 Richard Frith-Macdonald  <rfm@gnu.org>

	* GSLinkedList.h:
	* GSLinkedList.m: Simple doubly linked list implementation
	* GSThreadPool.h:
	* GSThreadPool.m: Lightweight thread pool implementation
	* Performance.h: Include new headers
	* GNUmakefile: Build/install new source
	Add classes for a simple linked list and for a lightweight thread 
	pool for rapid handoff of operations to other threads.

2008-12-12 Richard Frith-Macdonald  <rfm@gnu.org>

	* GSSkipMutableArray.m: Fix uninitialised variable.

2008-05-30 Richard Frith-Macdonald  <rfm@gnu.org>

	* GSThroughput.h:
	* GSThroughput.m:
	Add support for sending a notification of stats for the last minute
	so that rates by the minute can be logged.

2008-02-21 Richard Frith-Macdonald  <rfm@gnu.org>

	* GSCache.h:
	* GSCache.m:
	Improve handling of case when delegate asks for an item to be kept...
	changes the delegat callback methoid to include lifetime information.
	Make the cache thread-safe.

2008-01-31 Richard Frith-Macdonald  <rfm@gnu.org>

	* GSCache.h:
	* GSCache.m:
	Make cache keys 'id' rather than 'NSString*' as they can actually be
	any copyable object.

2007-12-08 Richard Frith-Macdonald  <rfm@gnu.org>

	* GNUmakefile: bump subminor version for release
	* GSThroughput.m: ([-description]) output information for periods
	from last cycle as well as current cycle.

2007-09-14 Richard Frith-Macdonald  <rfm@gnu.org>

	Update to LGPL3

2007-05-30  Richard Frith-Macdonald  <rfm@gnu.org>

	* GSTicker.m: Ensure tick is current before calling -newSecond:
