@@ -1,10 +1,16 @@
+2010-10-30 Richard Frith-Macdonald  <rfm@gnu.org>
+
+	* GSThreadPool.h:
+	* GSThreadPool.m:
+	Add new methed to return a shared pool.
+
 2010-09-29 Richard Frith-Macdonald  <rfm@gnu.org>
 
 	* GSLinkedList.h:
 	* GSLinkedList.m:
 	Revise structure and API for greater flexibility.
-	* GSThreadPool.h
-	* GSThreadPool.m
+	* GSThreadPool.h:
+	* GSThreadPool.m:
 	Modify for new linked list api.
 
 2010-09-23 Richard Frith-Macdonald  <rfm@gnu.org>
